# remote-theme

./: .gitignore  404.md  AGENTS.md  CLAUDE.md  CLEANUP_SUMMARY.md  Gemfile  LICENSE  README.md  _config.yml  blog-home.md  blog.md  courses.md  cv.md  datasets.md  download_devto.py  home-blog.md  home-courses-2.md  home-courses.md  index.md  llms.txt  package-lock.json  package.json  page.md  process_photos.py  project.md  pyproject.toml  search-blog.json  search-courses.json  search-publications.json  software.md  story.md  tailwind.config.js
_blog/: post-1.md  post-2.md  post-4.md  post-5.md
_courses/: advanced-macroeconomics.md  coding-for-economists.md  course-1.md  course-2.md  course-4.md  course-6.md  discovering-discrimination-with.md  economics-with-stata.md  empirical-research-seminar.md  engineering-and-analytics.md  international-trade.md  introduction-to-the.md  reproducible-research-from.md
_data/: config.yaml  grants.yaml  navbar.yaml  navbar.yml  project.yaml  team.csv  team.yaml  translation.yml
_datasets/: balance.md  businessgraph.md  cegjegyzek.md  dataset-1.md  dataset-2.md  dataset-3.md  handelsregister.md  hungarian_register.md  merleg.md  whoiswho.md  wms  wms.md
_events/: 2021-09-30-noits.md  2021-10-18-respect.md  2021-12-10-ceu.md  2021-12-21-mke-kezdi.md  2021-12-22-mke-halpern.md  2022-03-28-frb-philadelphia.md  2022-04-05-geneva.md  2022-04-27-liverpool.md  2022-05-26-tilburg.md  2022-08-23-ceu.md  2022-10-17-uniwien.md  2022-10-18-ceu.md  2023-03-01-rajk.md  2023-04-18-rajk.md  2023-05-02-oenb.md  2023-05-18-melbourne.md  (+90 more)
(+134 files in other folders)
